--- a/src/style/Styles.css
+++ b/src/style/Styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    height: 200px; /* Ajusta el tamaño según lo necesario */
+    height: 200px;
     background-color: #f0f0f0;
     border-radius: 20px;
   }
@@ -46,30 +46,3 @@
       transform: translateX(100%);
     }
   }
-
-/*
-  @media (max-width: 1380px) {
-    .section-desktop {
-      
-      
-      
-    }
-
-    .nombre {
-      font-size: 55px !important;
-      line-height: 50px;
-    }
-
-    .container-presentation{
-      margin-left: 70px;
-      margin-right: 70px;
-    }
-
-    .imagen {
-      width: 300px !important;
-
-    }
-
-
-  }
-  */
